# claude-code-discord-bridge

./: CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  start-loop.bat
.github/workflows/: auto-approve.yml  codeql.yml
claude_discord/: bot.py  cli.py  lounge.py  main.py  setup.py  worktree.py
claude_discord/claude/: runner.py
claude_discord/cogs/: _run_helper.py  auto_upgrade.py  claude_chat.py  event_processor.py  run_config.py
claude_discord/database/: lounge_repo.py  models.py
claude_discord/discord_ui/: inbox_classifier.py  statusline.py  streaming_manager.py  thread_dashboard.py  thread_renamer.py
claude_discord/ext/: api_server.py
docs/es/: README.md
docs/fr/: README.md
docs/ja/: CONTRIBUTING.md  README.md
docs/ko/: README.md
docs/pt-BR/: README.md
docs/zh-CN/: README.md
examples/ebibot/cogs/: ai_router_cog.py  ceo_responder.py  dept_responder.py
tests/: test_api_server.py  test_claude_chat.py  test_event_processor.py  test_inbox.py  test_lounge.py  test_main_config.py  test_run_helper.py  test_thread_dashboard.py  test_thread_renamer.py
